--- a/style.css
+++ b/style.css
@@ -103,6 +103,15 @@ a:hover {
 #control-panel #panelToggle {
 	display: none;
 }
+.limits {
+	font-size: 1.2em;
+	text-align: center;
+}
+#limitText {
+    margin-left: 0.5em;
+	font-size: 1.2em;
+    font-weight: bolder;
+}
 .site-title, .copyright {
 	text-align: center;
 }
