--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ button {
 	top: 1em;
 	right: 0;
 	padding: .2em;
+	border: 2px solid #351932;
 	font-size: 1.6em;
 	background: rgba(255, 255, 255, .2);
 	cursor: pointer;
@@ -89,19 +90,18 @@ button {
 	z-index: 1;
 	transition: all .2s ease;
 }
-#control-panel button {
+#control-panel .button {
 	display: block;
 	margin: .5em;
-	border: none;
-	border-radius: 1em;
-	width: 2em;
-	height: 2em;
+	padding: .4em;
+	border: 4px solid #351932;
+	border-radius: .8em;
 	background: #fff;
 	box-sizing: border-box;
 	transition: inherit;
 	cursor: pointer;
 }
-#control-panel button:hover {
+#control-panel .button:hover {
 	color: #fff;
 	background: #351932;
 }
